first version for deploy

--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -282,7 +282,7 @@ hr {
 }
 
 .logo-wrapper {
-  background: url(../images/logo.png) no-repeat;
+  background: url(../images/transomlogo.png) no-repeat;
   height: 100px;
   background-position: 15px;
 }
