--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
+          {:toc}
+        </ul>
+        
+        <ul>
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
