--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 ---
-title: TransomJS Rocks!
+site: 
+  title: TransomJS Rocks!
 ---
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
