show the link to the  code in the remote layout

--- a/_layouts/remote_markdown.html
+++ b/_layouts/remote_markdown.html
@@ -6,11 +6,15 @@ layout: default
 <script>
     $(document).ready(function() {
         var link = "<a target=\"_blank\" href=\"{{ page.fallback }}\">{{ page.fallback }}</a>";
+        var fallbck = "{{ page.fallback }}";
         $.ajax({
             url:'https://binaryops.ca/mdproxy/render.php?url={{ page.markdown }}',
                 type:'GET',
                 success: function(data){
                     $('#markdown-content-container').html($(data + "<hr />Page loaded from: " + link));
+                    var repoLink = fallbck.split("blob")[0];
+                    $('#codelink').attr("href", repoLink);
+                    $('.code-link').show();
                 },
                 error: function(x, t ,m) {
                     // console.log(arguments);
@@ -20,12 +24,15 @@ layout: default
         });
     });
 </script>    
+    
     <div class="row">
         <div class="col-md-4">
           {% include docs_nav.html %}
         </div>
-
         <div class="col-md-8">
+            <div class="pull-right code-link"  >
+                <a id="codelink" target="_blank" href="http://google.com"><i class="fa fa-github">&nbsp;Get the code</i></a>
+            </div>
             <div id="markdown-content-container">
                 <center>
                     <div class="fa-3x">
