--- a/css/main.scss
+++ b/css/main.scss
@@ -88,3 +88,19 @@ body {
 .navbar-form .has-feedback .form-control-feedback{
   top:10px
 }
+
+.code-link {
+  background-color: #2196F3;
+  border-radius: 20px;
+  padding: 9px;
+  color: white;
+  display: none;
+}
+.code-link a {
+  color: white;
+  font-weight: bold;
+}
+.code-link a:hover {
+  color: white;
+  font-weight: bold;
+}
