update remote layout

--- a/_layouts/remote_markdown.html
+++ b/_layouts/remote_markdown.html
@@ -29,7 +29,7 @@ layout: default
         <div class="col-md-4">
           {% include docs_nav.html %}
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" style="border: 1px solid white;">
             <div class="pull-right code-link"  >
                 <a id="codelink" target="_blank" href="http://google.com"><i class="fa fa-github">&nbsp;Get the code</i></a>
             </div>
