fixed z-index on the menu

--- a/_layouts/remote_markdown.html
+++ b/_layouts/remote_markdown.html
@@ -28,7 +28,7 @@ layout: default
 </script>    
     
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="z-index:100;">
           {% include docs_nav.html %}
         </div>
         <div class="col-md-8">
