--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -26,6 +26,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="{{ site.email_address }}"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                    <li><a href="{{ site.twitter_url }}"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
