--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
     <link rel="shortcut icon" href="{{ "/favicon.ico?1" | prepend: site.baseurl }}">
     {% seo %}
 
+    <script src="{{ "/js/morphext/morphext.min.js" | prepend: site.baseurl }}"></script>    
+    <link rel="stylesheet" href="{{ "/js/morphext/animate.css" | prepend: site.baseurl }}">
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
